--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
   <link rel="stylesheet" href="css/main.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <title>Document</title>
 </head>
 <body>
-  
+  <h1>Virtual Slot Machine</h1>
+  <div id = "btn">
+  <button id="coinSlot">coin man</button>
+  </div>  
+
+ <table>
+  <tr>
+    <td class = 1>1</td>
+    <td class = 2>2</td>
+    <td class = 3>3</td>
+  </tr> 
+
+
+ </table>
+  <div id = "btn">
+  <button id="handle">handle</button>
+  </div>  
+
+  <p class = 'cash'></p>
+  <p class = 'betM'></p>
+  <script src = "js/app.js" ></script>
 </body>
 </html>
