--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>Virtual Slot Machine</h1>
   <div id = "btn">
-  <button id="coinSlot">coin man</button>
+  <button id="coinSlot">Insert Coin</button>
   </div>  
 
  <table>
