made all images except 5 more efficient

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <title>Document</title>
+  <title>Virtual Slot Machine</title>
 </head>
 <body>
   <h1>Virtual Slot Machine</h1>
@@ -17,9 +17,9 @@
 
  <table>
   <tr>
-    <td class = 1>1</td>
-    <td class = 2>2</td>
-    <td class = 3>3</td>
+    <td class = 's1'>5</td>
+    <td class = 's2'>5</td>
+    <td class = 's3'>5</td>
   </tr> 
 
 
