Made all images more efficient, and added sounds coin/win

--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
 </head>
 <body>
   <h1>Virtual Slot Machine</h1>
-  <div id = "btn">
-  <button id="coinSlot">Insert Coin</button>
-  </div>  
+
+  <section class = "btn">
+    <div id = "coinSlot"><img src="https://www.888casino.com/blog/sites/default/files/MinimumWager_Image_0.png" height="150" alt="frickin heck"></div>
+    <p class = 'cash'></p>
+    <p class = 'betM'></p>
+    <div id = "handle"><img src="https://sentosa.travelshoppes.com/Content/images/spin-button.png" alt="frickin heck"></div>
+  </section> 
+
+  
+
+ 
 
  <table>
   <tr>
@@ -24,12 +32,9 @@
 
 
  </table>
-  <div id = "btn">
-  <button id="handle">handle</button>
-  </div>  
+  
 
-  <p class = 'cash'></p>
-  <p class = 'betM'></p>
+  
   <script src = "js/app.js" ></script>
 </body>
 </html>
