added start menu, and made it impossible to do actions while slots are rolling

--- a/index.html
+++ b/index.html
@@ -10,8 +10,28 @@
   <title>Virtual Slot Machine</title>
 </head>
 <body>
-  <h1>Virtual Slot Machine</h1>
+    <h1>Virtual Slot Machine</h1>
+  <section id = 'menu'>
 
+      <section id = 'btns'>
+        <button class = 'menuB' id = 'options'>Options</button>
+        <button class = 'menuB' id = 'instructions'>Instructions </button>
+        <button class = 'menuB' id = 'start'>Start</button>
+      </section>
+
+      <table>
+          <tr>
+            <td class = 's1'>5</td>
+            <td class = 's2'>5</td>
+            <td class = 's3'>5</td>
+          </tr> 
+        
+        
+         </table>
+  </section>
+
+
+  <main>
   <section class = "btn">
     <div id = "coinSlot"><img src="https://www.888casino.com/blog/sites/default/files/MinimumWager_Image_0.png" height="150" alt="frickin heck"></div>
     <p class = 'cash'></p>
@@ -32,8 +52,7 @@
 
 
  </table>
-  
-
+  </main>
   
   <script src = "js/app.js" ></script>
 </body>
