--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
-  <link href="https://fonts.googleapis.com/css?family=Monoton|Abril+Fatface" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Monoton|Abril+Fatface|PT+Sans+Narrow" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <title>Virtual Slot Machine</title>
 </head>
 <body class="container">
-  
+<div class = "please">
 
 
   <section id="menu">
@@ -53,7 +53,7 @@
   <section id="main">
     <section class="header row">
       <button class="back2 two columns">Back To Menu</button>
-      <p class="cash one column"></p>
+      <p class="cash one column offset-by-one"></p>
       <p class="winnings one column"></p>
       <p class="betM two columns"></p>
       <p class="betC one column"></p>
@@ -63,12 +63,16 @@
     <div id="handle"><img src="https://sentosa.travelshoppes.com/Content/images/spin-button.png" alt="frickin heck"></div>
 
     <div class="background">
+        <button class="bet1">Bet $1</button>
+        <button class="bet25">Bet $25</button>
+        <button class="bet100">Bet $100</button>
+        <button class="bet1000">Bet $1000</button>
         <div class="s1"><img src="" alt="Whoops" height="270" width="280"></div>
         <div class="s2"><img src="" alt="Whoops" height="270" width="280"></div>
         <div class="s3"><img src="" alt="Whoops" height="270" width="280"></div>
     </div>
   </section>
-  
+</div>
   <script src="js/app.js" ></script>
 </body>
 </html>
