reformatted most of the project

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <section id="menu">
       <div class="row">
-        <h1 class="red eight columns offset-by-two">Virtual $lot Machine</h1>
+        <h1 class="title eight columns offset-by-two">Virtual $lot Machine</h1>
       </div>
       <section id="btns" class="row">
         <button class="menuB four columns offset-by-two" id="instructions">Instructions</button>
@@ -53,16 +53,19 @@
   <section id="main">
     <section class="header row">
       <button class="back2 two columns">Back To Menu</button>
-      <p class="cash one column offset-by-one"></p>
-      <p class="winnings one column"></p>
-      <p class="betM two columns"></p>
-      <p class="betC one column"></p>
+      <p class="winnings one column offset-by-six"></p>
+      
     </section> 
 
-    <div id="coinSlot"><img src="https://www.888casino.com/blog/sites/default/files/MinimumWager_Image_0.png" height="150" alt="frickin heck"></div>
-    <div id="handle"><img src="https://sentosa.travelshoppes.com/Content/images/spin-button.png" alt="frickin heck"></div>
+    
 
     <div class="background">
+        <div id="coinSlot"><img src="https://i.imgur.com/9DYVHve.png" height="130" alt="frickin heck"></div>
+        <div id="handle"><img src="https://sentosa.travelshoppes.com/Content/images/spin-button.png" alt="frickin heck"></div>
+        <div class = "screen">
+          <p class="betM"></p>
+          <p class="betC"></p>
+        </div>
         <button class="bet1">Bet $1</button>
         <button class="bet25">Bet $25</button>
         <button class="bet100">Bet $100</button>
