--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
-  <link href="https://fonts.googleapis.com/css?family=Monoton|Abril+Fatface|PT+Sans+Narrow" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Monoton|Abril+Fatface|PT+Sans+Narrow|Arvo" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <title>Virtual Slot Machine</title>
@@ -70,9 +70,11 @@
         <button class="bet25">Bet $25</button>
         <button class="bet100">Bet $100</button>
         <button class="bet1000">Bet $1000</button>
-        <div class="s1"><img src="" alt="Whoops" height="270" width="280"></div>
-        <div class="s2"><img src="" alt="Whoops" height="270" width="280"></div>
-        <div class="s3"><img src="" alt="Whoops" height="270" width="280"></div>
+        <div class = "squares">
+          <div class="s1"><img src="" alt="Whoops" height="270" width="280"></div>
+          <div class="s2"><img src="" alt="Whoops" height="270" width="280"></div>
+          <div class="s3"><img src="" alt="Whoops" height="270" width="280"></div>
+        </div>
     </div>
   </section>
 </div>
