Cleaned up rest of code and finalized win logic

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 			<div class="box">
 				<p id="para">Click the coin slot to enter as many coins as you wish to bet, then click the spin button to spin the slots! The more you bet the more you can win! More rare icons reward more coins.<br></p>
 				<div class="icons1 row">
-					<p class="four columns"><img alt="zoinks" height="100" src="http://downloadclipart.org/do-upload/clipart/2016-06/Cute_cherries_clip_art.png" width="90"> 1x coins</p>
-					<p class="four columns"><img alt="zoinks" height="100" src="http://downloadclipart.org/do-upload/clipart/2016-06/Orange_clipart_png.png" width="90">2x coins</p>
-					<p class="four columns"><img alt="zoinks" height="90" src="https://tr1.cbsistatic.com/hub/i/2015/05/07/a6b60bbe-f4ae-11e4-940f-14feb5cc3d2a/lemon09062012.png" width="80"> 3x coins</p>
+					<p class="four columns"><img alt="Something went wrong" height="100" src="http://downloadclipart.org/do-upload/clipart/2016-06/Cute_cherries_clip_art.png" width="90"> 1x coins</p>
+					<p class="four columns"><img alt="Something went wrong" height="100" src="http://downloadclipart.org/do-upload/clipart/2016-06/Orange_clipart_png.png" width="90">2x coins</p>
+					<p class="four columns"><img alt="Something went wrong" height="90" src="https://tr1.cbsistatic.com/hub/i/2015/05/07/a6b60bbe-f4ae-11e4-940f-14feb5cc3d2a/lemon09062012.png" width="80"> 3x coins</p>
 				</div>
 				<div class="icons2 row">
 					<p class="four columns offset-by-two"><br>
@@ -47,16 +47,16 @@
 				<p class="winnings one column offset-by-six"></p>
 			</section>
 			<div class="background">
-				<div id="coinSlot"><img alt="frickin heck" height="130" src="https://i.imgur.com/9DYVHve.png"></div>
-				<div id="handle"><img alt="frickin heck" src="https://sentosa.travelshoppes.com/Content/images/spin-button.png"></div>
+				<div id="coinSlot"><img alt="Something went wrong" height="130" src="https://i.imgur.com/9DYVHve.png"></div>
+				<div id="handle"><img alt="Something went wrong" src="https://sentosa.travelshoppes.com/Content/images/spin-button.png"></div>
 				<div class="screen">
 					<p class="betM"></p>
 					<p class="betC"></p>
 				</div><button class="bet1">Bet $1</button> <button class="bet25">Bet $25</button> <button class="bet100">Bet $100</button> <button class="bet1000">Bet $1000</button>
 				<div class="squares">
-					<div class="s1"><img alt="Whoops" height="270" src="" width="280"></div>
-					<div class="s2"><img alt="Whoops" height="270" src="" width="280"></div>
-					<div class="s3"><img alt="Whoops" height="270" src="" width="280"></div>
+					<div class="s1"><img alt="Something went wrong" height="270" src="" width="280"></div>
+					<div class="s2"><img alt="Something went wrong" height="270" src="" width="280"></div>
+					<div class="s3"><img alt="Something went wrong" height="270" src="" width="280"></div>
 				</div>
 			</div>
 		</section>
