--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div class="screen">
 					<p class="betM"></p>
 					<p class="betC"></p>
-				</div><button class="bet1">Bet $1</button> <button class="bet25">Bet $25</button> <button class="bet100">Bet $100</button> <button class="bet1000">Bet $1000</button>
+				</div><button class="reset">Reset</button><button class="bet1">Bet $1</button> <button class="bet25">Bet $25</button> <button class="bet100">Bet $100</button> <button class="bet1000">Bet $1000</button>
 				<div class="squares">
 					<div class="s1"><img alt="Something went wrong" height="270" src="" width="280"></div>
 					<div class="s2"><img alt="Something went wrong" height="270" src="" width="280"></div>
